<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtlebot3_tourguide</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="minhlangwalker@gmail.com">minhlang102</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav2_msgs</build_depend>
  <build_depend>nav2_lifecycle_manager</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>nav2_util</build_depend>
  <build_depend>rclcpp_action</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>nav2_util</exec_depend>
  <exec_depend>rclcpp_action</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
